# SephirothOS-v2

./: .gitignore  README.md  bootstrap.py  eventbus.py  gitfetch.py  logger.py  main.py  pyproject.toml
.github/workflows/: quality.yml
api/: sysinfo.py
api/backend/hometab/: dashboard.py
api/mkp/: mkpf.py  mkpi.py
api/ux/: announcements.py  bgmp.py  clock.py  weather.py
assets/: pfps.qrc  resources.qrc
assets/icons/: icons.qrc  icons_rc.py
core/: app.py  welcome.py
core/onboarding/: account.py  finish.py  language.py  personalization.py  settings.py  start.py  theme.py  welcome.py
remote/: announcements.json
src/sephirothos/: __init__.py  __main__.py  application.py  config.py  events.py  logging_config.py  metadata.py  paths.py
src/sephirothos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sephirothos/content/: __init__.py  quotes.py  subtitles.py  tips.py  window_titles.py
src/sephirothos/services/: announcements.py  background_music.py  display_scale.py  performance.py  storage.py  theme.py  updates.py
src/sephirothos/ui/: metrics.py  roles.py  shell.py  styles.py  workers.py
src/sephirothos/ui/tabs/: navigation.py
tests/: conftest.py  test_announcements.py  test_config.py  test_display_scale.py  test_events.py  test_logging_config.py  test_metrics.py  test_navigation.py  test_paths.py  test_performance.py  test_storage.py  test_theme.py  test_updates.py
ui/: applications.py  cli.py  home.py  settings.py
utils/: config.py
utils/fun/: headliners.py  tipquote.py
utils/themes/: styles.py  tlib.py
(+17 files in other folders)
