[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sephirothos"
version = "0.1.0a1"
description = "A Windows desktop environment built with Python and Qt."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.7,<7",
    "packaging>=24,<27",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.14,<1",
]

[project.scripts]
sephirothos = "sephirothos.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"